Opened 14 years ago

Closed 9 years ago

#1536 closed defect (fixed)

u263: problem with b-frames

Reported by: ami_stuff Owned by:
Priority: normal Component: avcodec
Version: git-master Keywords: u263
Cc: Michael Niedermayer Blocked By:
Blocking: Reproduced by developer: yes
Analyzed by developer: no

Description

u263 codec have a possibility to encode video with enabled b-frames (1-5), ffmpeg decodes such files incorrectly.

$ ffmpeg -i u263_b-frames_5.avi out.avi
ffmpeg version 0.10.2.git-ab7d6cb Copyright (c) 2000-2012 the FFmpeg developers
  built on May 30 2012 13:37:47 with gcc 4.6.1
  configuration: --disable-ffprobe --enable-gpl
  libavutil      51. 55.100 / 51. 55.100
  libavcodec     54. 23.100 / 54. 23.100
  libavformat    54.  6.101 / 54.  6.101
  libavdevice    54.  0.100 / 54.  0.100
  libavfilter     2. 77.100 /  2. 77.100
  libswscale      2.  1.100 /  2.  1.100
  libswresample   0. 15.100 /  0. 15.100
  libpostproc    52.  0.100 / 52.  0.100
[h263 @ 0189c720] Warning: not compiled with thread support, using thread emulat
ion
Input #0, avi, from 'u263_b-frames_5.avi':
  Duration: 00:00:12.64, start: 0.000000, bitrate: 403 kb/s
    Stream #0:0: Video: h263 (U263 / 0x33363255), yuv420p, 320x240, 23.97 tbr, 2
3.97 tbn, 23.97 tbc
w:320 h:240 pixfmt:yuv420p tb:100/2397 sar:0/1 sws_param:flags=2
[buffersink @ 018a23c0] No opaque field provided
[mpeg4 @ 01898e40] Warning: not compiled with thread support, using thread emula
tion
[h263 @ 0189c720] Warning: not compiled with thread support, using thread emulat
ion
Output #0, avi, to 'out.avi':
  Metadata:
    ISFT            : Lavf54.6.101
    Stream #0:0: Video: mpeg4 (FMP4 / 0x34504D46), yuv420p, 320x240, q=2-31, 200
 kb/s, 23.97 tbn, 23.97 tbc
Stream mapping:
  Stream #0:0 -> #0:0 (h263 -> mpeg4)
Press [q] to stop, [?] for help
[h263 @ 0189c720] illegal ac vlc code at 0x3
[h263 @ 0189c720] Error at MB: 63
[h263 @ 0189c720] concealing 300 DC, 300 AC, 300 MV errors
[h263 @ 0189c720] illegal ac vlc code at 12x0
[h263 @ 0189c720] Error at MB: 12
[h263 @ 0189c720] concealing 300 DC, 300 AC, 300 MV errors
[h263 @ 0189c720] illegal ac vlc code at 17x5
[h263 @ 0189c720] Error at MB: 122
[h263 @ 0189c720] concealing 300 DC, 300 AC, 300 MV errors
[h263 @ 0189c720] b cbpy damaged at 19 5
[h263 @ 0189c720] Error at MB: 124
[h263 @ 0189c720] concealing 300 DC, 300 AC, 300 MV errors
[h263 @ 0189c720] run overflow at 13x0 i:0
[h263 @ 0189c720] Error at MB: 13
[h263 @ 0189c720] concealing 300 DC, 300 AC, 300 MV errors
[h263 @ 0189c720] b mb_type damaged at 18 3
[h263 @ 0189c720] Error at MB: 81
[h263 @ 0189c720] concealing 300 DC, 300 AC, 300 MV errors
[h263 @ 0189c720] illegal ac vlc code at 19x3
[h263 @ 0189c720] Error at MB: 82
[h263 @ 0189c720] concealing 300 DC, 300 AC, 300 MV errors
[h263 @ 0189c720] b mb_type damaged at 5 2
[h263 @ 0189c720] Error at MB: 47
[cut]
[h263 @ 0189c720] concealing 300 DC, 300 AC, 300 MV errors
[h263 @ 0189c720] b mb_type damaged at 16 0
[h263 @ 0189c720] Error at MB: 16
[h263 @ 0189c720] concealing 300 DC, 300 AC, 300 MV errors
frame=  296 fps= 74 q=5.1 size=     467kB time=00:00:12.55 bitrate= 304.7kbits/s
illegal ac vlc code at 13x0
[h263 @ 0189c720] Error at MB: 13
[h263 @ 0189c720] concealing 300 DC, 300 AC, 300 MV errors
[h263 @ 0189c720] b mb_type damaged at 17 1
[h263 @ 0189c720] Error at MB: 38
[h263 @ 0189c720] concealing 300 DC, 300 AC, 300 MV errors
frame=  298 fps= 74 q=5.2 Lsize=     474kB time=00:00:12.64 bitrate= 306.9kbits/
s
video:461kB audio:0kB global headers:0kB muxing overhead 2.776824%

Attachments (3)

u263.avi (425.6 KB ) - added by ami_stuff 14 years ago.
u263_b-frames_1.avi (482.0 KB ) - added by ami_stuff 14 years ago.
u263_b-frames_5.avi (623.2 KB ) - added by ami_stuff 14 years ago.

Download all attachments as: .zip

Change History (13)

by ami_stuff, 14 years ago

Attachment: u263.avi added

by ami_stuff, 14 years ago

Attachment: u263_b-frames_1.avi added

by ami_stuff, 14 years ago

Attachment: u263_b-frames_5.avi added

comment:1 by Carl Eugen Hoyos, 14 years ago

Component: undeterminedavcodec
Keywords: u263 added
Reproduced by developer: set
Status: newopen
Version: unspecifiedgit-master

comment:4 by Michael Niedermayer, 9 years ago

Ive added some fixes, can you confirm that the 5b frme file still looks periodically worse than other decoders acheive ? Iam asking as iam not sure this is a bug or its supposed to look like that

comment:5 by ami_stuff, 9 years ago

Thanks for trying to fix this. Here is the output from lead decoder (from "u263_b-frames_5.avi" file) :

https://oldbrowser.files.fm/u/4a9pkwdx

IMHO there is still something wrong. Unfortunately I don't have original decoder anymore to compare (u263).

comment:6 by ami_stuff, 9 years ago

VirtualDub reports 303 frames and 11 keyframes.

in reply to:  5 comment:7 by Carl Eugen Hoyos, 9 years ago

Replying to ami_stuff:

https://oldbrowser.files.fm/u/4a9pkwdx

Is there a bug in our zlib decoder?

comment:8 by ami_stuff, 9 years ago

No, wrong colors are not related to avilzlib. It's just how lead decoder decodes u263 file.

comment:9 by Michael Niedermayer, 9 years ago

Cc: Michael Niedermayer added

comment:10 by Michael Niedermayer, 9 years ago

Resolution: fixed
Status: openclosed
Note: See TracTickets for help on using tickets.